# text-based-adventure

./: Cargo.toml
pages/: home.yml
src/: main.rs  story.rs
