[package]
name = "text-based-adventure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = { version = "0.2", features = [ "color" ] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
simple-log = "1.5"
yew = "0.19"
